--- a/dad-jokes-project/package.json
+++ b/dad-jokes-project/package.json
@@ -9,17 +9,20 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "firebase": "^7.14.3",
     "link": "^0.1.5",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.1",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.4.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sticky-footer": "0.1.0-rc3",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
     "uuid": "^8.0.0",
     "uuidv4": "^6.0.8"
   },
