--- a/dad-jokes-project/package.json
+++ b/dad-jokes-project/package.json
@@ -16,13 +16,14 @@
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "react-redux-firebase": "^3.4.0",
+    "react-redux-firebase": "^2.1.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-sticky-footer": "0.1.0-rc3",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.13.0",
+    "redux-firestore": "^0.5.7",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.0.0",
     "uuidv4": "^6.0.8"
   },
